--- a/Home/styles.css
+++ b/Home/styles.css
@@ -5,8 +5,8 @@
 }
 
 body {
-    height: 100vh;
-    width: 100vw;
+    max-width: 100vw;
+    min-height: 100vh;
     font-family: "Roboto", sans-serif;
     font-size: 16px;
     overflow-x: hidden;
@@ -59,18 +59,17 @@ ul {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     margin: 40px;
-    
+
 }
 
 .men-ladies-tshirts img {
-   width: 100%
-
+    width: 100%
 }
 
-.men-ladies-tshirts p{
+.men-ladies-tshirts p {
     display: flex;
     justify-content: center;
-    margin: 20px ;
+    margin: 20px;
 }
 
 .men-ladies-tshirts button {
@@ -79,10 +78,42 @@ ul {
     justify-content: center;
     padding: 10px;
     margin-left: 37%;
-    
+
 }
 
- 
+/* Hamburger */
+.hamburger {
+    display: none;
+    cursor: pointer;
+}
+
+.hamburger .bar {
+    display: block;
+    width: 25px;
+    height: 3px;
+    background-color: black;
+    margin: 5px 0;
+}
+
+.links {
+    display: none;
+    flex-direction: column;
+    background-color: #333;
+    width: 100%;
+    position: absolute;
+    top: 60px;
+    left: 0;
+}
+
+.links li {
+    text-align: center;
+    margin: 10px 0;
+}
+
+.links.show {
+    display: flex;
+}
+
 
 /* Utilities Classes */
 
@@ -112,4 +143,75 @@ img {
     /* if we put img in certain div then it does't break out of div */
     max-width: 100%;
 }
- 
+
+/* Media Queries */
+@media only screen and (min-width: 375px) and (max-width: 415px) {
+    .nav-links {
+        display: none;
+        flex-direction: column;
+        background-color: #333;
+        width: 100%;
+        position: absolute;
+        top: 60px;
+        left: 0;
+    }
+
+    .nav-links li {
+        text-align: center;
+        margin: 10px 0;
+    }
+
+    .hamburger {
+        position: absolute;
+        left: 10px;
+        top: 25px;
+        display: block;
+    }
+
+    .nav-links.show {
+        display: flex;
+    }
+
+    body {
+        font-size: 14px;
+        background-color: #f0f0f0;
+    }
+
+    header {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+        font-size: small;
+        padding: 10px;
+    }
+
+    nav {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+
+    .nav-links a {
+        font-size: 18px;
+    }
+
+    .men-ladies-tshirts {
+        width: 100%;
+        display: flex;
+    }
+
+    .men-ladies-tshirts img {
+
+        width: 100%;
+        height: 180px;
+        object-fit: cover;
+        object-position: center;
+    }
+
+    .men-ladies-tshirts button {
+        margin-left: 0;
+        justify-content: center;
+        width: 100%;
+    }
+}
