--- a/Men_Outwear/styles.css
+++ b/Men_Outwear/styles.css
@@ -6,8 +6,8 @@
 }
 
 body {
-    height: 100%;
-    width: 100%;
+    max-height: 100vh;
+    min-width: 100vw;
     font-family: "Roboto", sans-serif;
     font-size: 16px;
     overflow-x: hidden;
@@ -105,4 +105,27 @@ ul {
     background: white;
 }
 
- 
+ /* Media Queries */
+ @media only screen and (max-width: 768px) {
+    .cart img, p, button{
+        display: none;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+
+    .men_outwears .container .item{
+        
+        flex-basis: 33%;
+        max-width: 33%;
+    }
+
+    /* .shop-list-item {
+        margin: 0 48px;
+    }
+
+    .title {
+        margin-top: 20%;
+    } */
+
+}
