--- a/Home/styles.css
+++ b/Home/styles.css
@@ -58,12 +58,14 @@ ul {
 .men-ladies-tshirts {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    margin: 40px;
+    /* margin: 40px; */
 
 }
 
 .men-ladies-tshirts img {
-    width: 100%
+    width: 100%;
+    height: 330px;
+    
 }
 
 .men-ladies-tshirts p {
@@ -77,9 +79,22 @@ ul {
     display: flex;
     justify-content: center;
     padding: 10px;
-    margin-left: 37%;
+    /* align-items: center; */
+    /* margin-left: 47%; */
 
 }
+
+/* .men-cart button {
+    position: absolute;
+    left: 25%;
+    
+}
+
+.ladies-cart button {
+    position: absolute;
+    left: 75%;
+    
+} */
 
 /* Hamburger */
 .hamburger {
