--- a/Single-Item/styles.css
+++ b/Single-Item/styles.css
@@ -52,6 +52,14 @@ ul {
     margin-bottom: 50px;
 }
 
+.item-img {
+    margin-top: 120px;
+    margin-left: 600px;
+    width: 100%;
+    max-height: 100%;
+    transform: scale(1.4);
+}
+
 /* Dropdown */
 .dropdown-container {
     max-width: 300px;
@@ -169,10 +177,13 @@ ul {
         align-items: center;
     }
 
-    .item-image {
-        margin: 32px 0px;
-        width: 50%;
-        max-width: 600px;
+    .item-img {
+        margin-right: 500px;
+    }
+
+    .item-description p {
+        width: 100%;
+        height: auto;
     }
 
     .item-information {
@@ -190,27 +201,22 @@ ul {
         font-size: 16px;
     }
 
-
-    /* .btn-add {
-        width: 100vw;
-        
-    } */
-
     .item-information button {
         border: 2px solid #000;
         background-color: #fff;
         margin-top: 10px;
-        font-size: 14px;
+        font-size: 10px;
         font-weight: 500;
         color: black;
         padding: 8px 40px;
         width: 90%;
+        text-align: center;
     }
 
     .item-information a {
         text-decoration: none;
         color: black;
-        
+
     }
 
 }
