--- a/Men_Outwear/styles.css
+++ b/Men_Outwear/styles.css
@@ -115,7 +115,8 @@ p {
 .grid {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    width: 100%;
+    height: auto;
     margin: 0 10px 32px 10px;
     padding: 0;
     list-style: none;
@@ -128,8 +129,8 @@ p {
 }
 
 .grid li {
-    flex-basis: 50%;
-    max-width: 50%;
+    flex-basis: 33%;
+    
 }
 
 /* Utilities Classes */
@@ -164,17 +165,9 @@ p {
     .cart img , button{
         display: none;
     }
-}
-
-@media only screen and (min-width: 768px) {
-
     .grid li {
-        flex-basis: 33%;
-        max-width: 33%;
+        flex-basis: 50%;
+        max-width: 50%;
     }
-
-    .item {
-        margin: 0 48px;
-    }
-
 }
+
