--- a/Home/styles.css
+++ b/Home/styles.css
@@ -75,7 +75,7 @@ ul {
 .men-ladies-tshirts img {
     width: 800px;
     height: 300px;
-    place-items: center;
+    /* place-items: center; */
     object-fit: cover;
     object-position: center;
 }
@@ -166,6 +166,12 @@ img {
         flex-direction: column;
         align-items: flex-start;
     }
+
+    .cart img {
+        width: 100%;
+        height: 180px;
+    }
+    
 
     .men-ladies-tshirts {
         width: 100%;
