--- a/Checkout/styles.css
+++ b/Checkout/styles.css
@@ -65,11 +65,6 @@ main {
     flex: 1;
 }
 
-form, .payment-info {
-    display: flex;
-    flex-direction: column;
-}
-
 input, select {
     padding: 10px;
     margin-bottom: 10px;
@@ -125,9 +120,24 @@ button {
 
 /* Media Queries */
 @media (max-width: 768px) {
+    h1,h2{
+        font-size: medium;
+    }
+    
+    h3{
+        font-size: smaller;
+    }
+
+    p{
+        font-size: small;
+    }
+   
     main {
         flex-direction: column;
+        margin-bottom: 50px;
+
     }
+
     button {
         width: 400px;
         position: fixed;
